# salamander-db

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml  crash.yml  release-crate.yml  release-python.yml
docs/: python-usage.md  upgrading.md
docs/specs/: dungeon-demo.md  first-class-diff.md  python-showcase-demos.md  retention-compaction.md
examples/py/: chat.py  dungeon.html  dungeon.py  dungeon_game.py  langgraph_demo.py  quickstart.py  record_demo.py  salamander_langgraph.py  test_chat.py  test_dungeon.py  test_langgraph.py  test_query_and_fork.py  test_roundtrip.py  test_unkillable_agent.py  test_watch.py  unkillable_agent.py
salamander/: Cargo.toml  README.md
salamander-demo/: Cargo.toml
salamander-demo/src/: crash.rs  main.rs  migrate.rs  session.rs  storm.rs  ui.html  ui.rs
salamander-py/: Cargo.toml  README.md  pyproject.toml  salamander.pyi
salamander-py/src/: lib.rs
salamander/benches/: instant_recovery.rs  open_time.rs  replay.rs  snapshots.rs  view_apply.rs
salamander/examples/: 01_kv_basics.rs  02_custom_payload.rs  03_query_views.rs  04_fork.rs  05_json_and_policy.rs  06_commit_feed.rs  07_replicate.rs  08_diff.rs
salamander/src/: branch.rs  commit.rs  db.rs  error.rs  event.rs  facade.rs  introspect.rs  json.rs  lib.rs  migration.rs  retention.rs  snapshot.rs  stream.rs
salamander/src/agent/: kv.rs  mod.rs  session.rs
salamander/src/format/: mod.rs
salamander/src/log/: index.rs  lock.rs  manifest.rs  mod.rs  reader.rs  record.rs  segment.rs
salamander/src/projection/: mod.rs
salamander/src/view/: indexed.rs  mod.rs
salamander/tests/: branch_migration.rs  branches.rs  commit_feed.rs  commit_policy.rs  custom_payload.rs  diff.proptest-regressions  diff.rs  engine_facade.rs  format_v2_storage.rs  instant_recovery.rs  json_payload.rs  migration_v1.rs  projection_runtime.rs  props.rs  query.rs  replay.rs  retention.rs  roundtrip.rs  snapshots.rs  streaming_reader.rs  streams_batches.rs  streams_model.rs  timetravel.rs  torn_tail.rs
salamander/tests/fixtures/format-v2/: event-minimal.hex
scripts/: bench_plot.py  crash_loop.ps1  crash_loop.sh  record_demo.sh
