[package]
name = "salamander-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
salamander = { package = "salamander-db", path = "../salamander" }
# Both already in the engine's own dependency tree (DESIGN §1.2) — the
# playground uses them to speak the declared payload codec and JSON API.
serde_json = "1"
bincode = "1.3"
